compiler-core/src/type_/snapshots/gleam_core__type___tests__erlang_only_function_used_by_javascript_module.snap
---
source: compiler-core/src/type_/tests.rs
expression: "@external(erlang, \"foo\", \"bar\")\npub fn erlang_only() -> Int\n\npub fn main() {\n  erlang_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:5:3
  │
5 │   erlang_only()
  │   ^^^^^^^^^^^

This value doesn't have an implementation for the JavaScript target.

