compiler-core/src/type_/snapshots/gleam_core__type___tests__erlang_only_function_with_javascript_external.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\n@external(erlang, \"foo\", \"bar\")\npub fn erlang_only() -> Int\n\n@external(javascript, \"foo\", \"bar\")\npub fn all_targets() -> Int {\n  erlang_only()\n}\n\npub fn main() {\n  all_targets()\n}\n    "
---
error: Unsupported target
  ┌─ /src/one/two.gleam:7:3
  │
7 │   erlang_only()
  │   ^^^^^^^^^^^

This function doesn't have an implementation for the JavaScript target.

