compiler-core/src/type_/snapshots/gleam_core__type___tests__generic_unlabelled_field_in_updated_const_record_wrong_type.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Wibble(a) {\n            Wibble(a, b: Int, c: a)\n        }\n\n        const w = Wibble(1, 2, 3)\n        const w2 = Wibble(..w, c: False)"
---
----- SOURCE CODE
pub type Wibble(a) {
            Wibble(a, b: Int, c: a)
        }

        const w = Wibble(1, 2, 3)
        const w2 = Wibble(..w, c: False)

----- ERROR
error: Incomplete record update
  ┌─ /src/one/two.gleam:6:29
  │
6 │         const w2 = Wibble(..w, c: False)
  │                             ^ This is a `Wibble(Int)`

The 1st field of this value is a `Int`, but the arguments given to the
record update indicate that it should be a `Bool`.

Note: Unlabelled fields cannot be updated in a record update, so either add
a label or use a record constructor.
