compiler-core/src/type_/snapshots/gleam_core__type___tests__javascript_only_constant.snap
---
source: compiler-core/src/type_/tests.rs
expression: "import module\npub fn main() {\n  module.javascript_only_constant()\n}"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:3:9
  │
3 │   module.javascript_only_constant()
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^

This value doesn't have an implementation for the Erlang target.

